--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning Branches</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Heading 1</h1>
+  </body>
 </html>
